modified index contact and other components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="razeev, portfolio, web developer" />
     <meta name="author" content="Razeev" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Razeev | Portfolio</title>
+    <title>राजीव | 🧌🧞 (Iz Lost)</title>
   </head>
   <body>
     <div id="root"></div>
